[gd_scene load_steps=5 format=3 uid="uid://c0nqiq7ae4atq"]

[ext_resource type="Script" path="res://Scenes/game_manager.gd" id="1_77fve"]
[ext_resource type="PackedScene" uid="uid://cpe5jttgrcodt" path="res://Scenes/level1.tscn" id="1_qe2ty"]
[ext_resource type="PackedScene" uid="uid://bq785l1wmksxa" path="res://Scenes/text_input.tscn" id="2_4nqmg"]
[ext_resource type="AudioStream" uid="uid://delvdsanmivay" path="res://Assets/Sounds/music_3_loop_1.wav" id="4_w1hm6"]

[node name="Merged" type="Node3D" node_paths=PackedStringArray("text_input", "player_list")]
script = ExtResource("1_77fve")
text_input = NodePath("TextInput")
player_list = [NodePath("Level1/Player"), NodePath("Level1/Player2"), NodePath("Level1/Player3"), NodePath("Level1/Player4")]

[node name="TextInput" parent="." node_paths=PackedStringArray("player_list") instance=ExtResource("2_4nqmg")]
visible = false
player_list = [NodePath("../Level1/Player"), NodePath("../Level1/Player2"), NodePath("../Level1/Player3"), NodePath("../Level1/Player4")]

[node name="Level1" parent="." instance=ExtResource("1_qe2ty")]

[node name="Music" parent="Level1" index="76"]
stream = ExtResource("4_w1hm6")
autoplay = true

[connection signal="body_entered" from="Level1/Redbox" to="." method="_on_redbox_body_entered"]
[connection signal="body_entered" from="Level1/Bluebox" to="." method="_on_bluebox_body_entered"]
[connection signal="body_entered" from="Level1/Yellowbox" to="." method="_on_yellowbox_body_entered"]
[connection signal="body_entered" from="Level1/Greenbox" to="." method="_on_greenbox_body_entered"]
[connection signal="finished" from="Level1/Music" to="." method="_on_music_finished"]
[connection signal="finished" from="Level1/Cardmusic" to="." method="_on_cardmusic_finished"]

[editable path="Level1"]
